--- a/src/app/pages/weather/weather.page.html
+++ b/src/app/pages/weather/weather.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-card-header>
-  {{ weatherData.name }} Weather
+  <!-- {{ weatherData.name }} Weather -->
 </ion-card-header>
 
 <ion-content>
